  Kinkhorst)
- [core] do not automatically set and create TempDir, it might lead to security
  issue (thanks to Thijs Kinkhorst)
+ [lang] Czech update
- bug #2066923 [display] Navi browse icon does not go to page 1 
- patch #2075263 [auth] Single sign-on and cookie clearing, 
  thanks to Charles Suh - cws125
- bug #2080963 [charset] Clarify doc and improved code, thanks to
  Victor Volkov - hanut

2.11.9.0 (2008-08-28)
- bug #2031221 [auth] Links to version number on login screen 
- bug #2032707 [core] PMA does not start if ini_set() is disabled 
- bug #2004915 [bookmarks] Saved queries greater than 1000 chars not
  displayed, thanks to Maik Wiege - mswiege
- bug #2037381 [export] Export type "replace" does not work
- bug #2037375 [export] DROP PROCEDURE needs IF EXISTS 
- bug #2045512 [export] Numbers in Excel export
- bug #2074250 [parser] Undefined variable seen_from 

2.11.8.0 (2008-07-28)
- patch #1987593 [interface] Table list pagination in navi, 
  thanks to Jason Day - jday29
- bug #1989081 [profiling] Profiling causes query to be executed again
  (really causes a problem in case of INSERT/UPDATE)
- bug #1990342 [import] SQL file import very slow on Windows,
  thanks to Richard Heaton - wotnot
- bug [XHTML] problem with tabindex and radio fields
- bug #1971221 [interface] tabindex not set correctly
- bug [views] VIEW name created via the GUI was not protected with backquotes
- bug #1989813 [interface] Deleting multiple views (space in name)
- bug #1992628 [parser] SQL parser removes essential space 
- bug #1989281 [export] Export fails if one table is marked as crashed
- bug #2001005 [GUI] ARCHIVE cannot have indexes 
- bug #1989281 [export] CSV for MS Excel incorrect escaping of double quotes
- bug #1959855 [interface] Font size option problem when no config file
  (todo (trunk): navi frame size does not change for theme original)
- bug #1982489 [relation] Relationship view should check for changes 
- bug [history] Do not save too big queries in history